Fixed measures - however temporary fix only. Too much code duplication. Fixed double clicking of dimensions for adding and removing dims/meas.

--- a/trunk/pat-ui/css/saiku/src/styles.css
+++ b/trunk/pat-ui/css/saiku/src/styles.css
@@ -256,11 +256,10 @@ html, body {
     margin: 0;
 }
 .sidebar .dimension_tree {
-    height: 230px;
+    height: 180px;
     overflow: auto;
 }
 .sidebar .measure_tree {
-    height: 130px;
     overflow: auto;
 }
 
